--- a/frontend/index.html
+++ b/frontend/index.html
@@ -74,13 +74,13 @@
       }
       .editor_left_column {
         width: 350px;
-        border-right: solid 2px #aaa;;
+        border-right: solid 3px #aaa;;
         display: flex;
         flex-direction: column;
       }
       .editor_left_column_top {
         height: 300px;
-        border-bottom: solid 2px #aaa;;
+        border-bottom: solid 3px #aaa;;
       }
       .editor_left_column_bottom {
         
@@ -107,6 +107,9 @@
         border-right: solid 1px #dadada;
         padding: 2px 4px;
         cursor: default;
+      }
+      .asset_table_td:last-of-type {
+        border-right-width: 0;
       }
     </style>
   </head>
