--- a/frontend/index.html
+++ b/frontend/index.html
@@ -71,7 +71,7 @@
                   <th>アセット名</th>
                   <th>種別</th>
                 </tr>
-                <tr v-for="assetId in assetsManager.findAllIds()">
+                <tr v-for="assetId in assetsManager.findAllIds()" @click="selectAsset(assetId)" :style="assetRowCss(assetId)">
                   <td class="asset_table_td">{{assetId}}</td>
                   <td class="asset_table_td">{{assetsManager.find(assetId).name}}</td>
                   <td class="asset_table_td">{{assetsManager.find(assetId).type === 'image' ? '画像' : 'テキスト'}}</td>
@@ -95,6 +95,7 @@
                 <tr
                   v-for="(rowItem, index) in frameEvents"
                   :style="{backgroundColor: rowBackgroundColor(rowItem)}"
+                  @click="selectFrameEvent(index)"
                 >
                   <td class="frame_events_table_td">{{rowItem['scheduledFrameNumber']}}</td>
                   <td class="frame_events_table_td">{{rowItem['frameCount']}}</td>
