:heavy_plus_sign: プレビュー実装

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -63,7 +63,7 @@
           <button>イベントを削除</button>
           <button>イベントを下に移動</button>
           <button>イベントを上に移動</button>
-          <button>再生</button>
+          <button @click="openPreview()">プレビュー</button>
         </div>
         <div class="editor_columns">
           <div class="editor_left_column">
