--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,6 +34,10 @@
     </script>
     <script src="editor.js" type="text/javascript"></script>
     <script type="text/javascript">
+      window.onbeforeunload = function(event) {
+        event.preventDefault();
+        event.returnValue = "";
+      }
       window.onload = function () {
         const compiler = Compiler(assetsManager);
         const renderer = Renderer();
