--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,8 +35,8 @@
     <script src="editor.js" type="text/javascript"></script>
     <script type="text/javascript">
       window.onbeforeunload = function(event) {
-        event.preventDefault();
-        event.returnValue = "";
+        // event.preventDefault();
+        // event.returnValue = "";
       }
       window.onload = function () {
         const compiler = Compiler(assetsManager);
@@ -60,6 +60,14 @@
     <div id="root" class="player_root" style="display: none;"></div>
 
     <div id="vue_root">
+      <div class="modal_background">
+        &nbsp;
+      </div>
+
+      <div class="modal">
+        <div class="modal_title">イベントの編集</div>
+      </div>
+      
       <div class="editor_layout">
         <div class="editor_menu">
           <button>イベントを追加</button>
