:heavy_plus_sign: 追加

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -66,6 +66,14 @@
 
       <div class="modal">
         <div class="modal_title">イベントの編集</div>
+        <div class="modal_content">
+          <div class="modal_content_left">
+            left
+          </div>
+          <div class="modal_content_right">
+            right
+          </div>
+        </div>
       </div>
       
       <div class="editor_layout">
