:heavy_plus_sign: ボタン追加

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -98,6 +98,9 @@
                 <option value="callComponentUserFunction">ユーザ関数を呼び出し</option>
               </select>
             </div>
+
+            <button class="form_button">OK</button>
+            <button class="form_button">キャンセル</button>
           </div>
           <div class="modal_content_right">
             right
