:heavy_plus_sign: 定義追加

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -86,18 +86,22 @@
                   </select>
                 </div>
     
-                <div class="form_row" v-if="editingFrameEvent.type === 'executeAction'">
+                <div class="form_row" v-if="editingFrameEvent.type === 'executeAction' && editingFrameEvent.executeAction">
                   <div class="form_row_label">
                     アクションの種別
                   </div>
     
-                  <select class="form_select"">
+                  <select class="form_select" v-model="editingFrameEvent.executeAction.type">
                     <option value="eraseLayers">指定深度を消去</option>
                     <option value="play">再生</option>
                     <option value="stop">停止</option>
                     <option value="gotoAndPlay">指定ラベルへジャンプして再生</option>
                     <option value="setTextValue">テキストの表示内容を更新</option>
                     <option value="callComponentUserFunction">ユーザ関数を呼び出し</option>
+                    <option value="registerGlobalKeydownListener">キー押下リスナーを登録</option>
+                    <option value="unregisterGlobalKeydownListener">キー押下リスナーを登録解除</option>
+                    <option value="startUserTimer">タイマーを開始</option>
+                    <option value="clearUserTimer">タイマーを解除</option>
                   </select>
                 </div>
               </div>
