--- a/frontend/index.html
+++ b/frontend/index.html
@@ -257,7 +257,7 @@
                       ｵﾌﾞｼﾞｪｸﾄID
                     </div>
 
-                    <input type="text" class="form_input_text" v-model="editingFrameEvent.objectId" required pattern="^\w+$">
+                    <input type="text" class="form_input_text" v-model="editingFrameEvent.objectId" pattern="^\w+$">
                   </div>
 
                   <template v-if="editingFrameEvent.layoutOptions">
@@ -356,7 +356,7 @@
                         ｱｸﾃｨﾌﾞ時ID
                       </div>
     
-                      <input type="text" class="form_input_number" v-model="editingFrameEvent.putImage.activeAssetId" required pattern="^\w*$">
+                      <input type="text" class="form_input_number" v-model="editingFrameEvent.putImage.activeAssetId" pattern="^\w*$">
                     </div>
                   </div>
                 </template>
