--- a/frontend/index.html
+++ b/frontend/index.html
@@ -388,10 +388,10 @@
       <div class="editor_layout">
         <div class="editor_menu">
           <button @click="clickNewFrameEvent">イベントを追加</button>
-          <button @click="clickEditFrameEvent">イベントを編集</button>
-          <button @click="clickRemoveFrameEvent">イベントを削除</button>
-          <button @click="clickMoveUpwardFrameEvent">イベントを上に移動</button>
-          <button @click="clickMoveDownwardFrameEvent">イベントを下に移動</button>
+          <button @click="clickEditFrameEvent" :disabled="!selectedFrameEvent">イベントを編集</button>
+          <button @click="clickRemoveFrameEvent" :disabled="!selectedFrameEvent">イベントを削除</button>
+          <button @click="clickMoveUpwardFrameEvent" :disabled="!selectedFrameEvent">イベントを上に移動</button>
+          <button @click="clickMoveDownwardFrameEvent" :disabled="!selectedFrameEvent">イベントを下に移動</button>
           <button @click="openPreview()">プレビュー</button>
         </div>
         <div class="editor_columns">
