--- a/frontend/index.html
+++ b/frontend/index.html
@@ -189,7 +189,7 @@
                         間隔(1000で1秒)
                       </div>
     
-                      <input type="number" class="form_input_number" v-model="editingFrameEvent.executeAction.startUserTimer.componentUserFunctionName" required min="0" max="99999">
+                      <input type="number" class="form_input_number" v-model="editingFrameEvent.executeAction.startUserTimer.interval" required min="0" max="99999">
                     </div>
                   </template>
 
