--- a/frontend/index.html
+++ b/frontend/index.html
@@ -135,7 +135,7 @@
                         ユーザ関数名
                       </div>
     
-                      <input type="text" class="form_input_text" v-model="editingFrameEvent.executeAction.callComponentUserFunction.componentUserFunctionName" required>
+                      <input type="text" class="form_input_text" v-model="editingFrameEvent.executeAction.callComponentUserFunction.name" required>
                     </div>  
                   </template>
 
