:heavy_plus_sign: 追加

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -340,6 +340,15 @@
                       </div>
                     </div>
                   </template>
+
+                  <div class="form_columns_row">
+                    <div class="form_row">
+                      <button class="form_button" type="button">クリック時のアクションを設定</button>
+                    </div>
+                    <div class="form_row">
+                      <button class="form_button" type="button">クリック時のアクションを削除</button>
+                    </div>
+                  </div>
                 </template>
 
                 <template v-if="editingFrameEvent.type === 'putImage' && editingFrameEvent.putImage">
