:heavy_plus_sign: コメント追加

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -540,7 +540,7 @@
               </div>
             </div>
             <div class="modal_content_right">
-              right
+              TODO: ここにプレビューを表示
             </div>
           </form>
         </div>
