--- a/frontend/preview.html
+++ b/frontend/preview.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Preview</title>
+    <title>プレビュー画面</title>
 
     <script type="text/javascript" src="root_controller.js"></script>
     <script type="text/javascript" src="screen_objects_manager.js"></script>
