--- a/frontend/index.html
+++ b/frontend/index.html
@@ -564,10 +564,7 @@
                     <img :src="selectedAsset.image.source" class="asset_preview_image">
                   </template>
 
-                  <template v-show="selectedAsset?.type === 'text'">
-                    <div ref="textWrapper">
-                    </div>
-                  </template>
+                  <div ref="textWrapper" v-show="selectedAsset?.type === 'text'"></div>
                 </template>  
               </div>
             </div>
