--- a/frontend/index.html
+++ b/frontend/index.html
@@ -540,7 +540,9 @@
               </div>
             </div>
             <div class="modal_content_right">
-              TODO: ここにプレビューを表示
+              <div class="modal_content_right_preview_event">
+                <div ref="modalEventPreviewWrapper"  class="modal_content_right_preview_event_wrapper"></div>
+              </div>
             </div>
           </form>
         </div>
