--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,7 +46,7 @@
     <div id="root" class="player_root" style="display: none;"></div>
 
     <div id="vue_root">
-      <div v-show="editingFrameEvent">
+      <div v-show="editingFrameEvent" v-cloack>
         <div class="modal_background">
           &nbsp;
         </div>
