:pencil2: 切り出した

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,6 +41,7 @@
       };
     </script>
     <link href="editor.css" rel="stylesheet">
+    <link href="edit_event_modal.css" rel="stylesheet">
   </head>
   <body>
     <div id="root" class="player_root" style="display: none;"></div>
