:pencil2: 切り出した

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -42,10 +42,9 @@
     </script>
     <link href="editor.css" rel="stylesheet">
     <link href="edit_event_modal.css" rel="stylesheet">
+    <link href="form.css" rel="stylesheet">
   </head>
   <body>
-    <div id="root" class="player_root" style="display: none;"></div>
-
     <div id="vue_root">
       <div v-show="editingFrameEvent" v-cloack>
         <div class="modal_background">
